# org_framework_io3d

./: README.md  ffigen.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/org/ioframework/io3d_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: io3d.podspec
lib/: ffi_utils.dart  io3d.dart  io3d_bindings_generated.dart
lib/vulkan/: header.dart  loader.dart  vk_api.dart
linux/: CMakeLists.txt
macos/: io3d.podspec
macos/Classes/: io3d.c
src/: CMakeLists.txt  io3d.c
test/: test0000_fake_test.dart  test1010_api.dart  test1020_triangle.dart
windows/: CMakeLists.txt
